--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/Tyuiu.MedvedevKA.Sprint7.Project.V6.csproj
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/Tyuiu.MedvedevKA.Sprint7.Project.V6.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,6 +81,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAbout.resx">
       <DependentUpon>FormAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDoctors.resx">
+      <DependentUpon>FormDoctors.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormGuide.resx">
       <DependentUpon>FormGuide.cs</DependentUpon>
