--- a/Tyuiu.MedvedevKA.Sprint7.Project.V6/Tyuiu.MedvedevKA.Sprint7.Project.V6.csproj
+++ b/Tyuiu.MedvedevKA.Sprint7.Project.V6/Tyuiu.MedvedevKA.Sprint7.Project.V6.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -77,6 +78,18 @@
     <Compile Include="FormPatients.Designer.cs">
       <DependentUpon>FormPatients.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSheduleDoctors.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSheduleDoctors.Designer.cs">
+      <DependentUpon>FormSheduleDoctors.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormShedulePatients.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormShedulePatients.Designer.cs">
+      <DependentUpon>FormShedulePatients.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAbout.resx">
@@ -93,6 +106,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPatients.resx">
       <DependentUpon>FormPatients.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSheduleDoctors.resx">
+      <DependentUpon>FormSheduleDoctors.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
